<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray_background">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.etsy.android.grid.util.DynamicHeightImageView
                android:id="@+id/event_register_imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_margin="8dp"
                android:contentDescription="@null"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/register_textview_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_below="@+id/event_register_imageView"
                android:text="@string/register_event"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:gravity="center"
                android:layout_centerHorizontal="true" />

            <LinearLayout
                android:background="@drawable/enthusia_news_background_unread"
                android:layout_below="@+id/register_textview_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:orientation="vertical">

                <EditText
                    style="@android:style/Widget.Holo.Light.EditText"
                    android:id="@+id/register_event_et_username"
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    android:layout_marginTop="25dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/black"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:singleLine="true"
                    android:gravity="left"
                    android:hint="@string/username" />

                <EditText
                    style="@android:style/Widget.Holo.Light.EditText"
                    android:id="@+id/register_event_et_email"
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginBottom="10dp"
                    android:inputType="textEmailAddress|textAutoCorrect|textAutoComplete"
                    android:textColor="@color/black"
                    android:singleLine="true"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:gravity="left"
                    android:hint="@string/email" />

                <EditText
                    style="@android:style/Widget.Holo.Light.EditText"
                    android:id="@+id/register_event_et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginBottom="10dp"
                    android:inputType="phone"
                    android:textColor="@color/black"
                    android:singleLine="true"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:gravity="left"
                    android:hint="@string/phone" />

                <Spinner
                    style="@android:style/Widget.Holo.Light.EditText"
                    android:id="@+id/register_event_spinner_select_event"
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/black"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:gravity="left"
                    android:prompt="@string/select_event" />

                <com.balysv.materialripple.MaterialRippleLayout xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/btn_register_event"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:rippleColor="@color/app_color_accent"
                    app:rippleBackground="@color/app_color">

                    <Button
                        style="?attr/buttonBarStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/white"
                        android:background="@android:color/transparent"
                        android:text="@string/register" />

                </com.balysv.materialripple.MaterialRippleLayout>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</LinearLayout>