<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/enthusia_about_view"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/gray_background"
    tools:ignore="HardcodedText">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:orientation="vertical">

        <org.enthusia.app.ui.SquareImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@null"
            android:scaleType="fitXY"
            android:src="@drawable/img_enthusia_tagline"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="6dp"
            android:paddingTop="10dp"
            android:paddingBottom="3dp"
            android:text="@string/enthusia_about"
            android:textSize="25sp"
            android:textAllCaps="true"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/enthusia_news_background_unread"
            android:padding="12dp"
            android:orientation="vertical">

            <org.enthusia.app.ui.ExpandableTextView
                android:id="@+id/enthusia_fragment_about_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/about_us"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:gravity="left"
                android:maxLines="3" />

            <LinearLayout
                android:id="@+id/enthusia_fragment_about_showmore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/enthusia_fragment_about_showmore_image"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:scaleType="fitXY"
                    android:rotation="0"
                    android:contentDescription="@null"
                    android:gravity="right"
                    android:background="?android:attr/selectableItemBackground"
                    android:src="@drawable/ic_expand"/>

            </LinearLayout>

        </LinearLayout>

        <!-- Rahul Iyer -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingLeft="6dp"
            android:paddingTop="10dp"
            android:paddingBottom="3dp"
            android:text="@string/enthusia_developed_by"
            android:textSize="25sp"
            android:textAllCaps="true"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="12dp"
            android:background="@drawable/enthusia_news_background_unread">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:text="Rahul Iyer"
                android:textSize="18sp"
                android:textColor="@color/black"/>

            <ImageButton
                android:id="@+id/r_fb"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:scaleType="fitXY"
                android:contentDescription="@null"
                android:src="@drawable/img_facebook"
                android:background="?android:attr/selectableItemBackground"/>

            <ImageButton
                android:id="@+id/r_twit"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="14dp"
                android:contentDescription="@null"
                android:scaleType="fitXY"
                android:src="@drawable/img_twitter"
                android:background="?android:attr/selectableItemBackground"/>

            <ImageButton
                android:id="@+id/r_plus"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="14dp"
                android:contentDescription="@null"
                android:scaleType="fitXY"
                android:src="@drawable/ic_plus"
                android:background="?android:attr/selectableItemBackground"/>

        </LinearLayout>

        <!-- Akshat Shenoy -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingLeft="6dp"
            android:paddingTop="10dp"
            android:paddingBottom="3dp"
            android:text="THANKS TO"
            android:textSize="25sp"
            android:textAllCaps="true"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="12dp"
            android:background="@drawable/enthusia_news_background_unread">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:text="Akshat Shenoy"
                android:textSize="18sp"
                android:textColor="@color/black"/>

            <ImageButton
                android:id="@+id/a_fb"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:scaleType="fitXY"
                android:contentDescription="@null"
                android:src="@drawable/img_facebook"
                android:background="?android:attr/selectableItemBackground"/>

            <ImageButton
                android:id="@+id/a_twit"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="14dp"
                android:contentDescription="@null"
                android:scaleType="fitXY"
                android:src="@drawable/img_twitter"
                android:background="?android:attr/selectableItemBackground"/>

            <ImageButton
                android:id="@+id/a_plus"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="14dp"
                android:contentDescription="@null"
                android:scaleType="fitXY"
                android:src="@drawable/ic_plus"
                android:background="?android:attr/selectableItemBackground" />
            
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent" />

    </LinearLayout>

</ScrollView>